--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react-crypto-tracker",
   "version": "0.1.0",
   "private": true,
+  "proxy": "",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "ccxt": "^1.49.58",
     "d3": "^6.7.0",
     "react": "^17.0.2",
