--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.21.1",
     "ccxt": "^1.49.58",
     "d3": "^6.7.0",
-    "pg": "^8.6.0",
+    "dotenv": "^9.0.1",
     "node-sass": "^4.14.1",
+    "pg": "^8.6.0",
+    "pg-native": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -24,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "db:reset": "node ./db/reset.js"
   },
   "eslintConfig": {
     "extends": [
