--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.26.2",
     "axios": "^0.21.1",
     "ccxt": "^1.49.73",
     "d3": "^6.7.0",
@@ -14,6 +15,7 @@
     "https-proxy-agent": "^5.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -27,7 +29,6 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "db:reset": "node ./db/reset.js"
-
   },
   "eslintConfig": {
     "extends": [
