--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^9.0.1",
     "https-proxy-agent": "^5.0.0",
     "node-sass": "^4.14.1",
+    "parallax-js": "^3.1.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
