--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.26.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "ccxt": "^1.49.73",
     "d3": "^6.7.0",
     "dotenv": "^9.0.1",
@@ -17,7 +18,9 @@
     "parallax-js": "^3.1.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-dropdown-select": "^4.7.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
