--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
+    "rsuite": "^4.10.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
