add users route

--- a/express-server/package.json
+++ b/express-server/package.json
@@ -2,9 +2,9 @@
   "name": "express-server",
   "version": "0.0.0",
   "private": true,
-  "proxy": "http://localhost:3002",
-  "scripts": {
+   "scripts": {
     "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www", 
     "db:reset": "node ./db/reset.js"
   },
   "dependencies": {
