--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-crypto-tracker",
   "version": "0.1.0",
   "private": true,
-  "proxy": "",
+  "proxy": "http://localhost:3002",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
