--- a/express-server/package.json
+++ b/express-server/package.json
@@ -2,14 +2,15 @@
   "name": "express-server",
   "version": "0.0.0",
   "private": true,
-   "scripts": {
+  "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www", 
+    "dev": "nodemon ./bin/www",
     "db:reset": "node ./db/reset.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^9.0.2",
