--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ccxt": "^1.49.73",
     "dotenv": "^9.0.1",
     "https-proxy-agent": "^5.0.0",
+    "loaders.css": "^0.1.2",
     "node-sass": "^4.14.1",
     "parallax-js": "^3.1.0",
     "react": "^17.0.2",
@@ -23,9 +24,12 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.7.4",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
+    "react-spinkit": "^3.0.0",
+    "react-spinners-kit": "^1.9.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
