--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.0",
+    "react-cookie": "^4.0.3",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.7.4",
     "react-loaders": "^3.0.1",
